# scribe

./: .cursorrules  .gitignore  Makefile  README.md  lint.sh  package-lock.json  package.json  pyproject.toml  style.css  tailwind.config.js
.github/workflows/: lint.yml  test.yml
.zed/: settings.json
builders/node/: Dockerfile  entrypoint.sh
scribe/: __init__.py  asset.py  backup.py  builder.py  cli.py  compile.py  config.py  constants.py  context.py  dev_builder.py  exceptions.py  footnotes.py  io.py  links.py  logger.py  logging.py  markdown.py  metadata.py  models.py  note.py  parsers.py  paths.py  plugins.py  predicates.py  snapshot.py  template_utilities.py  templates.py  watcher.py
scribe/build_plugins/: __init__.py  base.py  config.py  link_resolution.py  manager.py  tailwind.py  typescript.py
scribe/cli/: build.py  cli.py  format.py  launch.py  runserver.py  snapshot.py  validate.py  write.py
scribe/note_plugins/: __init__.py  base.py  config.py  date.py  footnotes.py  frontmatter.py  image_encoding.py  link_resolution.py  manager.py  markdown.py  screenshot.py  snapshot.py
scribe/resources/: style.css
scribe/templates/: about.html  base.html  dark_mode.html  home.html  logo.html  notes.html  opensource.html  post-travel.html  post.html  projects.html  rss.xml  snapshot.html  subscribe.html  travel.html
scribe/tests/: common.py  conftest.py  test_backup.py  test_builder.py  test_compile.py  test_footnotes.py  test_links.py  test_markdown.py  test_note.py  test_snapshot.py  test_template_utilities.py
tests/: __init__.py  test_builder.py  test_compile.py  test_config.py  test_context.py  test_dev_server.py  test_integration_full.py  test_paths.py  test_predicates.py  test_template_context.py  test_template_filtering.py
tests/build_plugins/: test_link_resolution.py  test_manager.py
tests/note_plugins/: test_date.py  test_footnotes.py  test_image_encoding.py  test_image_encoding_plugin.py  test_link_resolution.py  test_manager.py  test_screenshot.py  test_snapshot.py
