[project]
name = "scribe"
version = "0.1.0"
description = "Personal blog generation engine for freeman.vc"
authors = [
    { name = "Pierce Freeman", email = "pierce@freeman.vc" }
]
license = "MIT"

dependencies = [
    "jinja2>=3.1.2",
    "click>=8.0.1",
    "Markdown>=3.4.1",
    "Pygments>=2.13.0",
    "pygments-ansi-color>=0.0.6",
    "fastapi>=0.83.0",
    "python-dateutil>=2.8.2",
    "watchdog>=2.1.9",
    "beautifulsoup4>=4.11.1",
    "pillow>=9.2.0",
    "PyYAML>=6.0.1",
    "uvicorn>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "isort>=5.12.0",
    "pytest>=7.3.1",
    "autoflake>=2.1.1",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "types-beautifulsoup4>=4.12.0.5",
    "types-PyYAML>=6.0.12.9",
    "types-Markdown>=3.4.2.9",
    "types-python-dateutil>=2.8.19.13",
    "types-Pillow>=9.5.0.4",
    "djlint>=1.35.2",
]

[project.scripts]
start-writing = "scribe.cli.launch:main"
build-notes = "scribe.cli.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 4
float_to_top = true
include_trailing_comma = true
known_first_party = "scribe"
extra_standard_library = "pkg_resources"
skip = "__init__.py"
line_length = 99
lines_after_imports = 2
multi_line_output = 3

[tool.djlint]
profile = "jinja"
