[project]
name = "scribe"
version = "0.1.0"
description = "Personal blog generation engine for freeman.vc"
authors = [
    { name = "Pierce Freeman", email = "pierce@freeman.vc" }
]
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "jinja2>=3.1.2",
    "click>=8.0.1",
    "Markdown>=3.4.1",
    "Pygments>=2.13.0",
    "pygments-ansi-color>=0.0.6",
    "fastapi>=0.83.0",
    "python-dateutil>=2.8.2",
    "watchfiles>=0.21.0",
    "beautifulsoup4>=4.11.1",
    "pillow>=9.2.0",
    "PyYAML>=6.0.1",
    "uvicorn>=0.22.0",
    "rich>=13.7.0",
    "rapidfuzz>=3.6.1",
]

[project.scripts]
scribe = "scribe.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "ruff>=0.9.5",
    "pytest>=7.3.1",
    "types-beautifulsoup4>=4.12.0.5",
    "types-PyYAML>=6.0.12.9",
    "types-Markdown>=3.4.2.9",
    "types-python-dateutil>=2.8.19.13",
    "types-Pillow>=9.5.0.4",
    "djlint>=1.35.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services or are integration tests",
]
addopts = "-m 'not integration'"
